refactor: `allowedOrigins`를 불변 배열로 변경